[gd_scene load_steps=2 format=3 uid="uid://bn3no5ve2a2c6"]

[ext_resource type="Script" path="res://entities/AsteroidSpawner.gd" id="1_ox2xa"]

[node name="AsteroidSpawner" type="Node2D"]
script = ExtResource("1_ox2xa")

[node name="SpawnDelay" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="InitialDelay" type="Timer" parent="."]
process_callback = 0
one_shot = true
autostart = true

[connection signal="timeout" from="SpawnDelay" to="." method="_on_spawn_delay_timeout"]
[connection signal="timeout" from="InitialDelay" to="." method="_on_initial_delay_timeout"]
